--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -73,7 +73,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
  
   <div class="mb-5 text-justify">
   
-  Experienced and multidisciplinary scientist & consultant with a background in toxicology, biology, environmental 
+  Multidisciplinary senior scientist & consultant with a background in toxicology, biology, environmental 
   and computational sciences. My main objective is to develop computational and bioinformatic tools that 
   can expand scientific knowledge and make a valuable contribution to public health and society. My goal 
   is to achieve a comprehensive understanding of the biological mechanisms and risks associated with exposures 
@@ -87,12 +87,13 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <ul class="list-disc md:columns-2 columns-1 mx-6">
 
     
-      <li><b>Multi-omics Data Analysis</b>
+      <li><b>Multi-omics Data Integration</b>
         <ol style="list-style-type: circle; padding-bottom: 0;">
               <li style="margin-left:2em">Transcriptomics (scRNAseq)</li>
-              <li style="margin-left:2em; padding-bottom: 0;">Lipidomics</li>
-              <li style="margin-left:2em; padding-bottom: 0;">Metabolomics</li>
               <li style="margin-left:2em; padding-bottom: 0;">Proteomics</li>
+              <li style="margin-left:2em; padding-bottom: 0;">Metabolomics</li>
+              <li style="margin-left:2em; padding-bottom: 0;">Lipidomics</li>
+
          </ol>
 </li>
 
@@ -102,12 +103,12 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
             <ol style="list-style-type: circle; padding-bottom: 0;">
                   <li style="margin-left:2em; padding-bottom: 0;">R </li>
                   <li style="margin-left:2em; padding-bottom: 0;">Python </li>
-                  <li style="margin-left:2em; padding-bottom: 0;">UNIX/Shell</li>
                   <li style="margin-left:2em; padding-bottom: 0;">High-performance Computing (HPC)</li>
                   <li style="margin-left:2em; padding-bottom: 0;">Machine Learning</li>
-                  <li style="margin-left:2em; padding-bottom: 0;">RShiny</li>
+                  <li style="margin-left:2em; padding-bottom: 0;">Shiny</li>
                   <li style="margin-left:2em; padding-bottom: 0;">Version Control (Git)</li>
-                  <li style="margin-left:2em; padding-bottom: 0;">C++</li>
+                  <li style="margin-left:2em; padding-bottom: 0;">UNIX/Shell</li>
+
              </ol>
     </li>
     
@@ -116,40 +117,45 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
     <div style="line-height:60%;"> <br></div>
     <li><b>Scientific writing & Communication</b></li>
-    <div style="line-height:60%;"> <br></div>
-    <li><b>Toxicology </b></li>
- <div style="line-height:60%;"> <br></div>
-<li><b>Epidemiology</b></li>
+    <li style="margin-left:2em; padding-bottom: 0;">Data Analysis & Interpretation</li>
+
+<li><b>Toxicology</b></li>
 <div style="line-height:60%;"> <br></div>
 
     <li><b>Molecular biology & Epigenetics</b>
-            <ol style="list-style-type: circle; padding-bottom: 0;">
-                  <li style="margin-left:2em">qPCR, CUT&RUN, FACS,...</li>
-             </ol>
+            <ol style="list-style-type: circle; padding-bottom: 0;"></ol>
     </li>
      <div style="line-height:60%;"> <br></div>
     <li><b>Chemo-informatics</b>
                 <ol style="list-style-type: circle; padding-bottom: 0;">
-                  <li style="margin-left:2em">QSAR</li>
-                   <li style="margin-left:2em">In Silico Methods</li>
+                   <li style="margin-left:2em">In Silico Methods & QSAR</li>
              </ol></li>
               <div style="line-height:60%;"> <br></div>
-    <li><b>Wet Lab & Physiology</b>
-             <ol style="list-style-type: circle; padding-bottom: 0;">
-                    <li style="margin-left:2em">IHC, WB, Confocal Microscopy, ELISA,...</li>
-             </ol></li>
-              <div style="line-height:60%;"> <br></div>
+
     <li><b>Software Development & Web Design </b>
              <ol style="list-style-type: circle; padding-bottom: 0;">
                     <li style="margin-left:2em">Github, roxigen2,...</li>
-                    <li style="margin-left:2em">RShiny, SQL (DBI)</li>
+                    <li style="margin-left:2em">Shiny, SQL</li>
                     <li style="margin-left:2em">WordPress</li>
-                    <li style="margin-left:2em"> Photoshop, InDesign, Illustrator</li>
+                    <li style="margin-left:2em">Photoshop, InDesign, Illustrator</li>
                     <li style="margin-left:2em">Scientific Illustration</li>
              </ol></li>
               <div style="line-height:60%;"> <br></div>
     <li><b>Project management & Coordination </b>
+      <div style="line-height:60%;"> <br></div>
+      
+      <li><b>Epidemiology</b></li>
+      <div style="line-height:60%;"> <br></div>
 
+
+      <li><b>Wet Lab & Physiology</b>
+        <ol style="list-style-type: circle; padding-bottom: 0;">
+               <li style="margin-left:2em">IHC, WB, Confocal Microscopy, ELISA,...</li>
+               <li style="margin-left:2em">qPCR, CUT&RUN, FACS,...</li>
+        </ol></li>
+
+
+      
   </ul>
     </div>
 <br>
@@ -207,9 +213,13 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
   <div class="time-line-container grid gap-4 mb-10">
       <TimeLineElement
-      title="MAS in Toxicology. Risk Assessment, Clinic Toxicology and Ecotoxicology Modules (11 ECTS)"
+      title="MAS in Toxicology. Regulatory Toxicology, Clinic Toxicology, Ecotoxicology, Organ Toxicology Modules (20 ECTS)"
       subtitle="2023-Today at University of Geneva (UNIGE), Switzerland"
     />
+    <TimeLineElement
+    title="Postgraduate Education in Toxicology (PET). General Toxicology, Food Toxicology and Carcinogenesis Modules (6 ECTS)"
+    subtitle="2024-Today at University of Wageningen, Utrecht & Maastricht, The Netherlands"
+  />
     <TimeLineElement
       title="PhD in Biomedical Sciences"
       subtitle= "2016 to 2020 at University of Liege (ULIEGE), Belgium" 
@@ -273,7 +283,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
      <TimeLineElement title="Research stay Grant"  subtitle="2018 - Rotary Club (District 1630) for a 3-month research stay in the laboratory of Alejandro Lomniczi (OHSU, Portland, OR, USA)" />
      <TimeLineElement title="François Mignolet Award"  subtitle="2018 - Leon Fredericq Foundation" />
       <TimeLineElement title="Operating grant"  subtitle="2017 - Leon Fredericq Foundation" />
-      <TimeLineElement title="Non-FREIA Ph.D. program scholarship"  subtitle="2016-2020 - University of Liège (Belgium) " />
+      <TimeLineElement title="Non-FRIA Ph.D. program scholarship"  subtitle="2016-2020 - University of Liège (Belgium) " />
       <TimeLineElement title="Master’s program  scholarship"  subtitle="2013-2015 - University of Liège (Belgium) " />
       <TimeLineElement title="ERASMUS program scholarship"  subtitle="2012-2013 - Catholic University of Louvain (UCL, Belgium)" />
       <TimeLineElement title="Bachelor’s scholarships"  subtitle="2008-2013 - Ministry of Education, Culture and Sports (Spain)" />
@@ -320,7 +330,9 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       <section id="section8"></section>
   <div class="mb-5"><div class="text-3xl w-full font-bold">Participation in Conferences <hr> </div></div>
       <div class="time-line-container grid gap-4 mb-10">
-            <TimeLineElement title="SCAHT retreat"  subtitle="2023 -  Oral communication" />
+            <TimeLineElement title="SCAHT retreat"  subtitle="2024 -  Oral communication - Sursee, Switzerland" />
+            <TimeLineElement title="GRS on Environmental Endocrine Disruptors"  subtitle="2024 -  Oral communication - Toscany, Italy" />
+            <TimeLineElement title="Society for Neuroendocrinology meeting (SNE)"  subtitle="2024 -  Poster presentation - Nice, France" />
              <TimeLineElement title="Society for Neuroendocrinology meeting (SNE)"  subtitle="2021 -  Oral communication - Online" />
              <TimeLineElement title="Society for Behavioral Neuroendocrinology meeting (SBN)"  subtitle="2019 - Poster presentation - Bloomington, Indiana, USA" />
              <TimeLineElement title="European Congress for Endocrinology (ECE)"  subtitle="2019 - Oral communication  - Lyon, France" />
@@ -378,6 +390,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
               <section id="section12"></section>
   <div class="mb-5"><div class="text-3xl w-full font-bold">Certifications <hr> </div> </div>
           <ul class="list-disc mx-6 mb-10 grid gap-2">
+                    <li><a href="https://www.eurotox.com/what-is-ert/" target="_blank"> European Register Toxicologist (ONGOING)</a></li>
                     <li><a href="https://felasa.eu/" target="_blank"> FELASA certificate</a></li>
           </ul>
 
