--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,27 +54,28 @@ const last_posts = posts.slice(0, 3);
           <div class="py-1"><text class="text-lg"> 
       
                <div class="mb-1 text-justify">
-             I am multidisciplinary researcher with an expertise in biology, toxicology, 
-             computational and environmental sciences. As a researcher my focus lies in creating computational tools allowing to advance scientific knowledge to improve public health 
-               and environmental policies. I strive to develop a comprehensive understanding of the risks associated with chemical exposures and gain an understanding on the biological process behind their effects.          
-          
+                I am a multidisciplinary researcher specialized in biology, (eco-)toxicology, computational science and neuroscience. Currently, I am a researcher at the University of Lausanne and an independent consultant.
               </div>
             </text> </div></p>
               
          
                   <div class="py-1"><text class="text-lg"> 
                     <p align="justify">
-              As an independent consultant, I offer my expertise in bioinformatics, biostatistics and multiomics to scientists and industries.
-              My skill set encompasses a spectrum of offerings, ranging from multiomics data, to intricate statistical modeling, including the creation of insightful data visualizations and their subsequent interpretation.
-            </div>
+                      <b>As a researcher</b>, I develop computational methods to better understand the risks associated with environmental factors such as nutrition and chemical pollutants. These methods include machine learning models, multiomic & scRNAseq data analysis and the development of interactive tools to visualize chemical hazards and New Approach Methodologies (NAMs), among others.
+                    </div>
+
+                    <div class="py-1"><text class="text-lg"> 
+                      <p align="justify">
+                       <b> As a consultant</b>, I bring expertise in data science, biology and toxicology to scientists and industry. With my mixed background I can provide insightful data visualizations and deep interpretations of the underlying biological significance.
+                      </div>
+<br> 
+
             </text>
             <div class="py-1">  </div>
             <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> 
-              Data Science, Bioinformatics/Biostatistics, Toxicology, Endocrinology, Environmental Science, Environmental Epidemiology, Neuroscience. </p> </text>
+              Data Science, Bioinformatics/Biostatistics, (eco-)Toxicology, (Neuro-)Endocrinology, Computational Biology, Regulatory Toxicology, Neuroscience. </p> </text>
               <div class="py-1">  </div>
-              <text class="text-lg"><p align="justify">  <b>	Expertise Keywords:</b> Bioinformatics, Multiomics, Chemo-informatics, Toxicology, Neuroendocrinology, 
-               Environmental Sciences, Endocrine Disruption, Computational Biology, Adverse outcome pathways, 
-                Chemical Risk Assessment, Biostatistics, Molecular Biology, Physiology, Reproductive Toxicology. </p> </text>
+              <text class="text-lg"><p align="justify">  <b>	Expertise Keywords:</b> Multiomics, Chemo-informatics, Endocrine Disruption, Adverse outcome pathways (AOPs), Epidemiology, Molecular Biology, Reproductive Toxicology, scRNAseq, Neuroendocrinology. </p> </text>
 
               </div>
             
@@ -97,48 +98,43 @@ const last_posts = posts.slice(0, 3);
 
 
         <HorizontalCard
-        title="Multi-Omics Evaluation of the Neurotoxicity of Glycol Ether Solvents in Humans Using New Approach Methodologies (NAMs)"
+        title="Multi-Omics Approaches to Evaluate the Neurotoxicity of Propylene Glycol Ether Solvents"
         img="/p12b.png"
-        desc="Keywords: Brain Spheres, Bioinformatics, In Vitro Methods, Lipidomics, Metabolomics, Proteomics, Transcriptomics, Toxicology, Multiblock. "
+        desc="Keywords: Bioinformatics, BrainSpheres In vitro Models, NAMs, Lipidomics, Metabolomics, Proteomics, Transcriptomics, Toxicology, Benchmark Dose (BMD), Adverse outcome pathways (AOPs), Solvents"
         id="p12" 
         url="/p12/"
       />
 
 
-        <HorizontalCard
-          title="Pesticide Exposure Assessment of the Swiss Sensitive Population"
-          img="/p11b.png"
-          desc="Keywords: Environmental Contaminants, Pesticides, Toxicology, Exposure Assessment, Bio-samples, Exposure Mixtures, Exposure Sources, Endocrine Disruptors, Risk Assessment, Environmental Science."
-          id="p11" 
-          url="/p11/"
-        />
-
 
         <div class="divider my-0"></div>
 
         <HorizontalCard
-          title="A framework for identifying and prioritizing the risk asessment of Endocrine Disrupting Chemicals (EDCs)"
+          title="An Integrative Tool to Identify and Prioritze the Risk Asessment of Endocrine Disrupting Chemicals (EDCs)"
           img="/Tmap.png"
-          desc="Keywords: Endocrine Disruption, Toxicology, In Silico, QSAR, Machine Learning, NAMs, Risk Assessment, Chemo-informatics, Environmental Science, Adverse outcome pathways (AOPs)"
+          desc="Keywords: Endocrine Disruption, Toxicology, In Silico, Machine Learning, NAMs, Chemo-informatics, Adverse outcome pathways (AOPs)"
           id="p1" 
           url="/p1/"
         />
         <div class="divider my-0"></div>
         <HorizontalCard
-        title="Temporal dynamics of the tanycyte connectome according to changes in metabolic state"
-        img="/Connectome.png"
-        desc="Keywords: Neurosciences, Energy balance, Bioinformatics, Connectomics, Hypothalamus, Neuroendocrinology"
-        id="p2" 
-        url="/p2/"
-      />
-        <div class="divider my-0"></div>
-        <HorizontalCard
-        title="Deciphering the heterogeneity and plasticity of ependymoglial cells during energy imbalance"
+        title="HypCCAtlas, A Functional Hypothalamic Atlas of Cell-Cell Communication"
         img="/Pseudospatial.png"
-        desc="Keywords: Neurosciences, Energy balance, Bioinformatics, Connectomics, Hypothalamus, Neuroendocrinology"
+        desc="Keywords: Bioinformatics, Nutrition, Energy balance, Connectomics, Hypothalamus, Neuroendocrinology"
         id="p3" 
         url="/p3/"
       />
+      <div class="divider my-0"></div>
+
+      <HorizontalCard
+      title="Pesticide Exposure Assessment of the Swiss Sensitive Population"
+      img="/p11b.png"
+      desc="Keywords: Epidemiology, Pesticides, Toxicology, Exposure Assessment, Exposure Mixtures, Endocrine Disruptors."
+      id="p11" 
+      url="/p11/"
+    />
+
+       
 
 
 
