--- a/src/pages/p11.astro
+++ b/src/pages/p11.astro
@@ -58,35 +58,12 @@ In this project, we aim to assess the exposure of children to pesticides in Swit
 - Zürcher Weinland/Zürcher Vinland (ZV)
 - Grisons (GR).
   </p>
-                <br>
-                <p align="justify">
-The results will be used to identify and rank novel and unknown PPP exposure mixtures, including future in vitro testing for endocrine activity, oxidative stress and AChE interference.
- </p>
-                <br>
-                <p align="justify">
-<b>Aims of the Project</b>
-Globally, this comprehensive project aims to develop an integrative and open-source methodology to improve the identification and assessment of potential PPP exposure in different agricultural regions, thereby improving public health and supporting a shift in EU chemical regulations towards a more toxic-free environment.
- </p>
-                <br>
-                <p align="justify">
 
-<b>Methods</b>
-Within the four Swiss study areas, environmental and non-invasive bio-samples will be collected. We sample again grass samples within the four different study areas and dust samples from participating households. Additionally hair samples from children of the participating households will be collected. The samples are then analyzed for more than 300 pesticide residues and metabolites.
- </p>
                 <br>
                 <p align="justify">
-More about the project: <b>https://www.pestizidmonitoring.ch/</b> & <b>https://carolinelinhart.ch/</b>
+More about the project: <b>https://www.pestizidmonitoring.ch/</b> 
   </p>
-                <br>
-                <p align="justify">
-<b>Status of the Project and Project Plan</b>
-Nov 2023: Submission to the Ehtics Committee
-Dec & Jan 2023: Notification of local communities invited to participate
-Feb 2024: Start of information campaign and recruitment process
-March-April 2024: Recruitment phase
-April 2024: Start of survey & sample collection.
- </p>
-                <br>
+  <br>
                 <p align="justify">
 <b>Cooperations and Study Team</b>
 Project ongoing in cooperation with the Department of Biology, Laboratory of Soil Biodiversity, University of Neuchâtel.
