--- a/src/pages/p12.astro
+++ b/src/pages/p12.astro
@@ -4,9 +4,20 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 ---
 
 
-<BaseLayout title = "Pesticide Monitoring - David Lopez Rodriguez">
+<BaseLayout title = "Solvents Project - David Lopez Rodriguez">
 
 
-<div><div class="text-3xl w-full font-bold mb-2">UNDER CONSTRUCTION</div> </div>
+<div>
+          <div class="text-3xl w-full font-bold mb-2">Multi-Omics Approaches to Evaluate the Neurotoxicity of Propylene Glycol Ether Solvents</div>
+        </div>
 
-    
+     
+<br>
+<br>
+      
+<div>
+    <div class="text-2xl w-full font-bold mb-2"> ... C o m i n g  S o o n... </div>
+  </div>
+
+
+</div>
