--- a/src/pages/p2.astro
+++ b/src/pages/p2.astro
@@ -15,7 +15,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 </script>
 
 <div>
-          <div class="text-3xl w-full font-bold mb-2">Temporal dynamics of the tanycyte connectome according to changes in metabolic state </div>
+          <div class="text-3xl w-full font-bold mb-2">HypCCAtlas, A Functional Hypothalamic Atlas of Cell-Cell Communication</div>
         </div>
 
      
