--- a/src/pages/p3.astro
+++ b/src/pages/p3.astro
@@ -36,16 +36,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
  
   <p align="center">  
   <br>
-  
-  <b> ... BioRxiv preprint coming soon ...</b> </p>
-  <p align="justify">  
 
-
- 
- <p align="justify">  
- <br>
-
-  <b>Authors.</b> <i>Maxime Brunner, David Lopez-Rodriguez, Andrea Messina, Bernard Thorens, Federico Santoni, Fanny Langlet.</i></p>
 
   
   <p align="justify">  
@@ -72,14 +63,18 @@ Altogether, this data provides a mechanism through which energy status leads to 
 insights into molecular diversity underlying tanycyte classification. </p>
  
  
- 
+<br>
 
- 
+<b>Related publication</b> </p>
+
+<div class="text-lg"> <p align="justify"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Estrada-Meza J, Dali J, Rohrbach A, Deglise T, Messina A, Thorens B, Santoni F, Langlet F. <i> Fasting induces a metabolic switch and a spatial redistribution of tanycyte functions on lipid processing and neuronal interactions. </i> <b>  Nature Communications. </b> Volume 15, article number 6604, (2024) </p> </div>
+<div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b> &#8594; *Co-first authorship</b></p> </div>
+
 
 
  <p align="justify"> 
 <br>
-Project ongoingd at the <a href="https://wp.unil.ch/langletlab/" target="_blank"><i>laboratory of Prof. Fanny Langlet</i></a>  
+Project was held at the <a href="https://wp.unil.ch/langletlab/" target="_blank"><i>laboratory of Prof. Fanny Langlet</i></a>  
 (Department of Biomedical Sciences, University of Lausanne, Switzerland).</p></text>
 </div>
 
