--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -20,40 +20,50 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         </div>
 
         <HorizontalCard
-        title="Multi-Omics Evaluation of the Neurotoxicity of Glycol Ether Solvents in Humans Using New Approach Methodologies (NAMs)"
+        title="Multi-Omics Approaches to Evaluate the Neurotoxicity of Propylene Glycol Ether Solvents"
         img="/p12b.png"
-        desc="Keywords: Brain Spheres, Bioinformatics, In Vitro Methods, Lipidomics, Metabolomics, Proteomics, Transcriptomics, Toxicology, Multiblock. "
+        desc="Keywords: Bioinformatics, BrainSpheres In vitro Models, NAMs, Lipidomics, Metabolomics, Proteomics, Transcriptomics, Toxicology, Benchmark Dose (BMD), Adverse outcome pathways (AOPs), Solvents "
         id="p12" 
         url="/p12/"
       />
 
 
-        <HorizontalCard
-          title="Pesticide Exposure Assessment of the Swiss Sensitive Population"
-          img="/p11b.png"
-          desc="Keywords: Environmental Contaminants, Pesticides, Toxicology, Exposure Assessment, Bio-samples, Exposure Mixtures, Exposure Sources, Endocrine Disruptors, Risk Assessment, Environmental Science."
-          id="p11" 
-          url="/p11/"
-        />
+ 
+      <div class="divider my-0"></div>
 
 
         <HorizontalCard
-          title="A framework for identifying and prioritizing the risk asessment of Endocrine Disrupting Chemicals (EDCs)"
+          title="An Integrative Tool to Identify and Prioritze the Risk Asessment of Endocrine Disrupting Chemicals (EDCs)"
           img="/Tmap.png"
-          desc="Keywords: Endocrine Disruption, Toxicology, In Silico, QSAR, Machine Learning, NAMs, Risk Assessment, Chemo-informatics, Environmental Science, Adverse outcome pathways (AOPs)"
+          desc="Keywords: Endocrine Disruption, Toxicology, In Silico, Machine Learning, NAMs, Chemo-informatics, Adverse outcome pathways (AOPs)"
           id="p1" 
           url="/p1/"
         />
         
         <div class="divider my-0"></div>
         <HorizontalCard
-          title="Temporal dynamics of the tanycyte connectome according to changes in metabolic state"
+          title="HypCCAtlas, A Functional Hypothalamic Atlas of Cell-Cell Communication"
           img="/Connectome.png"
-          desc="Keywords: Neurosciences, Energy balance, Bioinformatics, Connectomics, Hypothalamus, Neuroendocrinology"
+          desc="Keywords: Bioinformatics, Nutrition, Energy balance, Connectomics, Hypothalamus, Neuroendocrinology"
           id="p2" 
           url="/p2/"
         />
+        <div class="divider my-0"></div>
+        <HorizontalCard
+        title="Pesticide Exposure Assessment of the Swiss Sensitive Population"
+        img="/p11b.png"
+        desc="Keywords: Environmental Contaminants, Pesticides, Toxicology, Exposure Assessment, Bio-samples, Exposure Mixtures, Exposure Sources, Endocrine Disruptors, Risk Assessment, Environmental Science."
+        id="p11" 
+        url="/p11/"
+      />        <div class="divider my-0"></div>
 
+
+        <br>
+</div>
+
+<div>
+          <div class="text-3xl w-full font-bold mb-2">Past projects </div>
+        </div>
         <div class="divider my-0"></div>
        <HorizontalCard
           title="Deciphering the heterogeneity and plasticity of ependymoglial cells during energy imbalance"
@@ -62,12 +72,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
           id="p3" 
           url="/p3/"
         />
-
-</div>
-
-<div>
-          <div class="text-3xl w-full font-bold mb-2">Past projects </div>
-        </div>
+        <div class="divider my-0"></div>
 
          <HorizontalCard
           title="The ontogeny of ependymoglial cells"
