--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -54,18 +54,28 @@ import HorizontalCard from "../components/HorizontalCard.astro";
  
 
  <section id="section1"></section>
-     <div class="text-2xl w-full font-bold mb-0 mt-10">Manuscripts in Preparation / Under Review <font size="2"> (as of 03/24) </font>  <hr>  </div>
+     <div class="text-2xl w-full font-bold mb-0 mt-10">Manuscripts Under Review  / In Preparation <font size="2"> (as of 09/24) </font>  <hr>  </div>
  
       <div style="line-height:50%;"> <br></div>
 
       <ul class="list-disc mx-6 mb-10 grid gap-2">
+        <li><div class="text-lg"> <p align="justify"> Fudvoye J, <u>Lopez-Rodriguez D</u> Parent AS. <i> Early placental biomarkers of a developmental exposure to a very low dose of BPS.</i> Under review in Chemosphere. </p> </div>
+        </li>  <li><div class="text-lg"> <p align="justify">  <u>Lopez-Rodriguez D</u>, Duroux D, Chevre N. <i> A One-Health Integrative Approach To Identify the Toxicity of Chemical Pollutants.  </i> Manuscripts in Preparation. </p> </div></li>
 
-      <li><div class="text-lg"> <p align="justify"> Pamies D, <u>Lopez-Rodriguez D</u>, Bertoli J, Meister I, Jornod N, Repond C, Boccard J, Fleurimont J, Nunes C, Rudaz S, Zurich MG. <i> Evaluation of the Neurotoxicity of Glycol Ether Solvents in Humans Using New Approach Methodologies (NAMs). </i> <b> Manuscripts in Preparation. </b> </p> </div></li>
-      
+        <li><div class="text-lg"> <p align="justify">  <u>Lopez-Rodriguez D</u>, Pamies D, Meister I, Jornod N, Repond C, Boccard J, Fleurimont J, Rudaz S, Zurich MG. <i> The use of Multiomic approaches to evaluate the Neurotoxicity of Polyetylene Glycol Ethers </i> Manuscripts in Preparation. </p> </div></li>
+
+        <li><div class="text-lg"> <p align="justify"> Wang S, <u>Lopez-Rodriguez D</u>, Kalph J, Morales Pantoja I, Nunez C, Fritsche E, Smirnova L, Pamies D. <i> Reproducibility assessment of the hiPSC-derived Brain Spheroid model. </i>Manuscripts in Preparation. </p> </div></li>
+
+
+        <li><div class="text-lg"> <p align="justify"> Wang S, <u>Lopez-Rodriguez D</u>, Frangiamone M, Zurich MG, Pamies D. <i>  Proteomic profiling of the BrainSpheres derived from human induced pluripotent stem cells. </i>Manuscripts in Preparation. </p> </div></li>
+
+
+
+      <li><div class="text-lg"> <p align="justify"> Pamies D, <u>Lopez-Rodriguez D</u>, Bertoli J, Meister I, Jornod N, Repond C, Boccard J, Fleurimont J, Nunes C, Rudaz S, Zurich MG. <i> Evaluation of the Neurotoxicity of Glycol Ether Solvents in Humans Using New Approach Methodologies (NAMs). </i>Manuscripts in Preparation. </p> </div></li>
+
       <li><div class="text-lg"> <p align="justify"> <u>Lopez-Rodriguez D</u> & Guerrero-Limon, G. <i> Harnessing the power of Artificial Intelligence (AI) to generate innovative New Alternative Methodologies (NAMs) to improve chemical regulatory risk assessment.</i> Manuscripts in Preparation. </p> </div>
       </li>
-      <li><div class="text-lg"> <p align="justify"> Fudvoye J, <u>Lopez-Rodriguez D</u> Parent AS. <i> Early placental biomarkers of a developmental exposure to a very low dose of BPS.</i> Manuscripts in Preparation. </p> </div>
-      </li>
+  
 
       </ul>
       
