--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -52,7 +52,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         <HorizontalCard
         title="Pesticide Exposure Assessment of the Swiss Sensitive Population"
         img="/p11b.png"
-        desc="Keywords: Environmental Contaminants, Pesticides, Toxicology, Exposure Assessment, Bio-samples, Exposure Mixtures, Exposure Sources, Endocrine Disruptors, Risk Assessment, Environmental Science."
+        desc="Keywords: Epidemiology, Pesticides, Toxicology, Exposure Assessment, Exposure Mixtures, Endocrine Disruptors"
         id="p11" 
         url="/p11/"
       />        <div class="divider my-0"></div>
