--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -129,7 +129,7 @@ const last_posts = posts.slice(0, 3);
       <HorizontalCard
       title="Pesticide Exposure Assessment of the Swiss Sensitive Population"
       img="/p11b.png"
-      desc="Keywords: Epidemiology, Pesticides, Toxicology, Exposure Assessment, Exposure Mixtures, Endocrine Disruptors."
+      desc="Keywords: Epidemiology, Pesticides, Toxicology, Exposure Assessment, Exposure Mixtures, Endocrine Disruptors"
       id="p11" 
       url="/p11/"
     />
