--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -205,6 +205,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
           </div>
           <div class="text-lg">
             <p align="justify">
+                        <a class="text-lg" href="https://www.rts.ch/audio-podcast/2024/audio/l-universite-de-neuchatel-lance-une-etude-sur-l-exposition-des-enfants-aux-pesticides-interview-de-david-lopez-rodriguez-28435896.html"> RTS,</a>
                         <a class="text-lg" href="https://www.letemps.ch/sciences/infertilite-pesticides-mis-cause"> Le Temps,</a>
                         <a class="text-lg" href="https://www.lavanguardia.com/vida/20190520/462341188690/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras.html"> La Vanguardia,</a>
                         <a class="text-lg" href="https://dailyscience.be/20/05/2019/les-perturbateurs-endocriniens-ont-un-impact-sur-la-reproduction-pendant-plusieurs-generations/"> Daily science,</a>
@@ -231,11 +232,9 @@ import HorizontalCard from "../components/HorizontalCard.astro";
                         <a class="text-lg" href="https://elveedordigital.com/aseguran-las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> El vector digital,</a>
                         <a class="text-lg" href="https://www.ultimahora.com/la-contaminacion-puede-alterar-la-fertilidad-generaciones-futuras-n2820398.html"> Ultima Hora,</a>
                         <a class="text-lg" href="http//z101digital.com/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> Digital,</a>
-                        <a class="text-lg" href="https://www.telemundo.com/node/3252932"> Telemundo,</a>
-                        <a class="text-lg" href="https//elveedordigital.com/aseguran-las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> El vector digital,</a>
-                        <a class="text-lg" href="https//www.ultimahora.com/la-contaminacion-puede-alterar-la-fertilidad-generaciones-futuras-n2820398.html"> Ultima Hora,</a>
-                        <a class="text-lg" href="http//z101digital.com/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras/"> Digital,</a>
-                        <a class="text-lg" href="https//www.telemundo.com/node/3252932"> Telemundo</a>
+                        <a class="text-lg" href="https://www.telemundo.com/node/3252932"> Telemundo.</a>
+
+  
                 </p>
             </div>
 
