--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -38,10 +38,11 @@ import HorizontalCard from "../components/HorizontalCard.astro";
       </nav>
 
       <nav style="background:#F2F7FF;"><a>  |  </a>
-            <a href="#section4" class="mb-5 text-justify"><b>PhD Thesis</b></a> <a>  |  </a>     
-            <a href="#section5"><b>Press Releases</b></a>    <a>  |  </a> 
-            <a href="#section6"><b>Articles in the General Press</b></a>    <a>  |  </a> 
-            <a href="#section7"><b>Master's Student Supervision</b></a>    <a>  |  </a> 
+            <a href="#section4" class="mb-5 text-justify"><b>Book Chapters</b></a> <a>  |  </a>  
+            <a href="#section5" class="mb-5 text-justify"><b>PhD Thesis</b></a> <a>  |  </a>     
+            <a href="#section6"><b>Press Releases</b></a>    <a>  |  </a> 
+            <a href="#section7"><b>Articles in the General Press</b></a>    <a>  |  </a> 
+            <a href="#section8"><b>Master's Student Supervision</b></a>    <a>  |  </a> 
       </nav>
 
   </div>
@@ -151,18 +152,27 @@ import HorizontalCard from "../components/HorizontalCard.astro";
  </p>
 
 
+ <section id="section4"></section>
+ <div class="text-2xl w-full font-bold mb-0 mt-10">Book Chapters <hr></div>
+ <div style="line-height:50%;"> <br></div>
+ <ul class="list-disc mx-6 mb-10 grid gap-2">
+  <li> <div class="text-lg"><p align="justify"><a href="https://www.frontiersin.org/research-topics/29939/stars-and-rising-stars-in-neuroendocrinology/overview" target="_blank"> Benani, A., ed. (2024). Stars and rising stars in neuroendocrinology. <u>Lopez-Rodriguez D</u> et al. Ontogeny of ependymoglial cells lining the third ventricle in mice. Lausanne: Frontiers Media SA. doi: 10.3389/978-2-8325-5385-5</a> </p> </li>
+  <li> <div class="text-lg"><p align="justify"><a href="https://www.frontiersin.org/research-topics/29939/stars-and-rising-stars-in-neuroendocrinology/overview" target="_blank"> Benani, A., ed. (2024). Stars and rising stars in neuroendocrinology. Franssen D, Johansson HKL, <u>Lopez-Rodriguez D</u> et al. Perinatal exposure to the fungicide ketoconazole alters hypothalamic control of puberty in female rats Lausanne: Frontiers Media SA. doi: 10.3389/978-2-8325-5385-5 </a>  </p></li>
+  </ul>
 
-  <section id="section4"></section>
+
+
+
+  <section id="section5"></section>
   <div> 
     <div class="text-2xl w-full font-bold mb-0">PhD Thesis<hr></div> 
     <div style="line-height:50%;"> <br></div>
-
   </div>
 
-
-
+  <ul class="list-disc mx-6 mb-10 grid gap-2">
+    <li>
       <p align="justify">
-        <a href=" " target="_blank">
+        <a href="https://drive.google.com/file/d/1krHdJQaA7Nar19DszodyQN1ibO5Vkfa7/view?usp=share_link" target="_blank">
           <text class="text-lg"> 
             <u>Lopez-Rodriguez D</u>. 
             <i>Direct, multi- and transgenerational effects of endocrine disruptors on maternal behavior and female sexual maturation.</i> 
@@ -175,10 +185,14 @@ import HorizontalCard from "../components/HorizontalCard.astro";
             <b>Download</b> 
           </text>
       </a> -->
+    </li>
+  </ul>
 
 
 
-  <section id="section5"></section>
+
+
+  <section id="section6"></section>
     <div class="text-2xl w-full font-bold mb-0 mt-10">Press Releases <hr></div>
     <div style="line-height:50%;"> <br></div>
 
@@ -191,7 +205,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
           </li>
       </ul>
 
-      <section id="section6"></section>
+      <section id="section7"></section>
           <div class="text-2xl w-full font-bold mb-0 mt-10">Articles in the General Press<hr></div>
   
 
@@ -238,7 +252,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
                 </p>
             </div>
 
-      <section id="section7"></section>
+      <section id="section8"></section>
           <div class="text-2xl w-full font-bold mb-0 mt-10">Master's Student Supervision <hr>  </div>
           <div style="line-height:50%;"> <br></div>
 
