--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -137,7 +137,7 @@ const last_posts = posts.slice(0, 3);
 
 <div class="py-5"></div>
 <div class="social-icons px-6 my-2 py-2 flex">
-		<a href="https://www.instagram.com/" target="_blank" class="mx-3" aria-label="x" title="x">
+		<a href="https://www.instagram.com/" target="_blank" class="mx-3" aria-label="x" title="Disruption">
 				<img src="/Thesis.jpg" alt="x" width="350" height="350"> </img>
 			</a>
 </div>
@@ -148,7 +148,7 @@ const last_posts = posts.slice(0, 3);
 
 
 <div class="py-10"></div>
- <div class="py-0"><text class="text-lg"> <p align="center">  <font size="2">   Website created in Github & VisualStudio using <a href="https://astro.build/"  target="_blank"><b>Astro<a>  </b> </p> </font>  
+ <div class="py-0"><text class="text-lg"> <p align="center">  <font size="2">   Website created in VisualStudio using <a href="https://astro.build/"  target="_blank"><b>Astro<a>  </b> </p> </font>  
 </text> </div>
 
 
