--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -73,7 +73,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
  
   <div class="mb-5 text-justify">
   
-  Multidisciplinary senior scientist & consultant with a background in toxicology, biology, environmental 
+  Multidisciplinary scientist & consultant with a background in toxicology, biology, environmental 
   and computational sciences. My main objective is to develop computational and bioinformatic tools that 
   can expand scientific knowledge and make a valuable contribution to public health and society. My goal 
   is to achieve a comprehensive understanding of the biological mechanisms and risks associated with exposures 
@@ -118,14 +118,15 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <div style="line-height:60%;"> <br></div>
     <li><b>Scientific writing & Communication</b></li>
     <li style="margin-left:2em; padding-bottom: 0;">Data Analysis & Interpretation</li>
+    <li><b>Molecular biology & Epigenetics</b>
+
+    <div style="line-height:60%;"> <br></div>
 
 <li><b>Toxicology</b></li>
 <div style="line-height:60%;"> <br></div>
-
-    <li><b>Molecular biology & Epigenetics</b>
-            <ol style="list-style-type: circle; padding-bottom: 0;"></ol>
+<li><b>Endocrine Disrupting Chemicals (EDCs)</b></li>
+<div style="line-height:60%;"> <br></div>
     </li>
-     <div style="line-height:60%;"> <br></div>
     <li><b>Chemo-informatics</b>
                 <ol style="list-style-type: circle; padding-bottom: 0;">
                    <li style="margin-left:2em">In Silico Methods & QSAR</li>
@@ -150,8 +151,10 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
       <li><b>Wet Lab & Physiology</b>
         <ol style="list-style-type: circle; padding-bottom: 0;">
-               <li style="margin-left:2em">IHC, WB, Confocal Microscopy, ELISA,...</li>
+               <li style="margin-left:2em">IHC, WB, ELISA,...</li>
                <li style="margin-left:2em">qPCR, CUT&RUN, FACS,...</li>
+               <li style="margin-left:2em">Quantitative fluorescent microscopy</li>
+
         </ol></li>
 
 
